--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "icy": "~2.0.0",
     "ipc-rpc": "~0.1.3",
     "less": "~1.4.2",
+    "maxmind": "^0.6.0",
     "mincer": "~0.5.6",
     "nconf": "~0.6.7",
     "node-uuid": "~1.4.0",
