Updates for modern ES
* preps files for containerization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,25 @@ services:
       - CONFIG_FILE=/streammachine/config/primary.json
     volumes:
       - ./config/dev/:/streammachine/config
+      - /tmp/streammachine/shared/:/streammachine/app/shared
     deploy:
       replicas: 1
+    ports:
+      - 8022:8022
   replica:
-    image: scprdev/streammachine:0.0.1
+    container_name: replica
+    build:
+      context: .
     environment:
       - CONFIG_FILE=/streammachine/config/replica.json
     volumes:
       - ./config/dev/:/streammachine/config
     deploy:
       replicas: 3
+  redis:
+    image: redis:4.0.1-alpine
+    command: redis-server
+    container_name: redis
+    restart: always
+    ports:
+      - 6379:6379/tcp
