--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^6.7.0-rc.1",
     "base64id": "0.1.0",
     "binary-search": "~1.2.0",
     "campfire": "~0.1.1",
@@ -34,7 +35,6 @@
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "dissolve": "~0.3.1",
-    "elasticsearch": "13.0.0-beta2",
     "express": "~3.3.0",
     "express-api-helper": "~0.0.1",
     "fluent-ffmpeg": "~1.7.1",
